2004-05-19  Kevin B. Kenny  <kennykb@acm.org>

	* win/tclWinFile.c (TclpMatchInDirectory): fix for an issue
	where there was a sneak path from Tcl_DStringFree to
	SetErrorCode(0). The result was that the error code could
	be reset between a call to FindFirstFileEx and the check
	of its status return, leading to a bizarre error return of
	{POSIX unknown {No error}}.  (Found in unplanned test -
	no incident logged at SourceForge.)
	
2004-05-19  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* tests/interp.test (interp-34.3): Rewrite this test to see if a
	time limit can catch a tight bytecode loop, a maximally aggressive
	denial-of-service attack.
	* generic/tclInterp.c (Tcl_LimitCheck): Fix the sense of checks to
	see whether a time limit has been extended.

	* tests/*.test: Many minor fixes, including ensuring that every
	test is run (so constraints control whether the test is doing
	anything) and making sure that constraints are always set using
	the API instead of poking around inside tcltest's internal
	datastructures.  Also got rid of all trailing whitespace lines
	from the test suite!

2004-05-19  Andreas Kupries  <andreask@activestate.com>

	* tclIO.c: Fixed [SF Tcl Bug 943274]. This is the same problem as
	* tclIO.h: [SF Tcl Bug 462317], see ChangeLog entry
	           2001-09-26. The fix done at that time is incomplete. It
	           is possible to get around it if the actual read
	           operation is defered and not executed in the event
	           handler itself. Instead of tracking if we are in an
	           read caused by a synthesized fileevent we now track if
	           the OS has delivered a true event = actual data and
	           bypass the driver if a read finds that there is no
	           actual data waiting. The flag is cleared by a short or
	           full read.

2004-05-17  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclPathObj.c: fix to (Bug 956063) in 'file dirname'.